<resources>
    <string name="app_name">TheMovies</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_movies">Movies</string>
    <string name="menu_locatio">Location</string>
    <string name="menu_map">Map</string>
    <string name="channel_name">chanel</string>
    <string name="channel_description">canal de notificacion</string>
    <string name="take_photo">Take Photo</string>
    <string name="start_capture">Start Capture</string>
    <string name="stop_capture">Stop Capture</string>
    <string name="menu_uploadFragment">Upload</string>
    <string name="menu_camera">Camera</string>

</resources>