<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_Movies">


    <fragment
        android:id="@+id/nav_upload"
        android:name="com.sapin.themovies.ui.upload.UploadFragment"
        android:label="@string/menu_uploadFragment"
        tools:layout="@layout/fragment_upload" >
        <action
            android:id="@+id/action_nav_upload_to_nav_camera"
            app:destination="@id/nav_camera" />
    </fragment>
    <fragment
        android:id="@+id/nav_camera"
        android:name="com.sapin.themovies.ui.upload.CameraFragment"
        android:label="@string/menu_camera"
        tools:layout="@layout/fragment_camera" >
        <action
            android:id="@+id/action_nav_camera_to_nav_upload"
            app:destination="@id/nav_upload" />
    </fragment>
    <fragment
        android:id="@+id/nav_Movies"
        android:name="com.sapin.themovies.ui.movie.MoviesListFragment"
        android:label="@string/menu_movies"
        tools:layout="@layout/fragment_movies_list" >
    </fragment>
    <fragment
        android:id="@+id/nav_Location"
        android:name="com.sapin.themovies.ui.location.LocationFragment"
        android:label="@string/menu_locatio"
        tools:layout="@layout/fragment_location" >
        <action
            android:id="@+id/action_nav_Location_to_nav_mapLocation"
            app:destination="@id/nav_mapLocation" />
    </fragment>


    <fragment
        android:id="@+id/nav_mapLocation"
        android:name="com.sapin.themovies.ui.location.MapsFragment"
        android:label="@string/menu_map"
        tools:layout="@layout/fragment_maps" >
        <action
            android:id="@+id/action_nav_mapLocation_to_nav_Location"
            app:destination="@id/nav_Location" />
    </fragment>

</navigation>